--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="index.js" defer></script>
+    <link rel="stylesheet" href="index.css">
     <title>Formulário</title>
   </head>
   <body>
@@ -26,7 +27,6 @@
                     <label for="password">Password *</label>
                     <input type="password" name="password" id="password" placeholder="Digite sua senha" />
                 </div>
-
                 <div class="input-group">
                     <label for="birthday">Birthday</label>
                     <input type="date" name="birthday" id="birthday" />
